RESOLVED FIXED94921
[BlackBerry] ASSERT failed in WebPagePrivate::commitRootLayerIfNeeded()
https://bugs.webkit.org/show_bug.cgi?id=94921
Summary [BlackBerry] ASSERT failed in WebPagePrivate::commitRootLayerIfNeeded()
Arvid Nilsson
Reported 2012-08-24 04:31:50 PDT
PR 104676
Attachments
Patch (2.25 KB, patch)
2012-08-25 22:52 PDT, Arvid Nilsson
no flags
Patch (2.24 KB, patch)
2012-08-25 22:55 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-08-25 22:52:13 PDT
Arvid Nilsson
Comment 2 2012-08-25 22:55:07 PDT
Created attachment 160590 [details] Patch Fix spelling error in commit msg
George Staikos
Comment 3 2012-08-26 05:18:42 PDT
Comment on attachment 160590 [details] Patch Might want to add an assertion in resumeRootLayerCommit() someday to assert your comment is correct.
WebKit Review Bot
Comment 4 2012-08-26 06:47:51 PDT
Comment on attachment 160590 [details] Patch Clearing flags on attachment: 160590 Committed r126705: <http://trac.webkit.org/changeset/126705>
WebKit Review Bot
Comment 5 2012-08-26 06:47:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.