[BlackBerry] ASSERT failed in WebPagePrivate::commitRootLayerIfNeeded() https://bugs.webkit.org/show_bug.cgi?id=94921

PR 104676
As visibility changed due to WebPage::setVisible(true),
resumeRootLayerCommit() would call commitRootLayerIfNeeded(), without
layouting or rendering. If a one shot drawing sync was pending at this
time, it would cause the condition
ASSERT(!needsOneShotDrawingSynchronization()) to fail.

The comment immediately before the assert states that "In case of one
shot drawing synchronization, you should first layoutIfNeeded, render,
then commit and draw the layers". However, resumeRootLayerCommit() did
no such thing.

Fixed by removing the call to commitRootLayerIfNeeded() from
resumeRootLayerCommit(), because the latter is only called in a code
path where we're going to layout, render and then commit anyway. These
operations will be performed from resumeBackingStore() which is called
at the end of setVisible().

Reviewed by George Staikos.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::resumeRootLayerCommit):


Canonical link: https://commits.webkit.org/112887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126705 268f45cc-cd09-0410-ab3c-d52691b4dbfc